Closed
Bug 1336086
Opened 9 years ago
Closed 9 years ago
don't export mozilla::services::_external_Get*Service*
Categories
(Core :: XPCOM, defect)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | unaffected |
| firefox53 | + | fixed |
| firefox54 | --- | fixed |
People
(Reporter: froydnj, Assigned: froydnj)
References
Details
Attachments
(1 file)
|
6.20 KB,
patch
|
benjamin
:
review+
jesup
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
More symbols that we don't need to export.
| Assignee | ||
Comment 1•9 years ago
|
||
CC'ing TB people to let them know this is going to break things.
Comment 2•9 years ago
|
||
Thanks for the heads-up. Can you be more specific? What is going to break?
| Assignee | ||
Comment 3•9 years ago
|
||
I don't know what's going to break because I don't know TB specifics. Bug 714967 covers the addition of these symbols, and it sounds like there was some build config where TB code linked to libxul rather than being linked inside of libxul (?). That sort of configuration would break with these changes (if it hasn't already broken because of other export removals).
| Assignee | ||
Comment 4•9 years ago
|
||
Removing the exported symbols is straightforward enough.
The only wrinkle is that PeerConnectionCtx.cpp gets compiled with and
without MOZILLA_INTERNAL_API. When compiling without
MOZILLA_INTERNAL_API, mozilla::services::Get*Service was redirected to
the _external_* symbol variants. But as the _external_* symbols no
longer exist, PeerConnectionCtx.cpp's code no longer worked.
Fortunately, PeerConnectionCtx.cpp already contains a few #ifdef
MOZILLA_INTERNAL_API blocks to handle internal/external compilation;
fixing this newest issue was just a matter of extending existing blocks
and adding new ones. The key observation is that we never added any
observers when compiling without MOZILLA_INTERNAL_API, so we can #ifdef
out the removals of observers, as those would have no effect, and simply
skip getting the observer service for the observer additions if we're
compiling without MOZILLA_INTERNAL_API.
Attachment #8833063 -
Flags: review?(rjesup)
Attachment #8833063 -
Flags: review?(benjamin)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → nfroyd
| Assignee | ||
Comment 5•9 years ago
|
||
[Tracking Requested - why for this release]:
We removed some symbols from export in 53:
https://groups.google.com/forum/#!msg/mozilla.dev.platform/qB-9gJl9Jgs/O8LhMg1dBwAJ
this bug would remove more of them. It seems better to have one release where we remove as many as possible all at once, rather than removing some in one release, some in another, and more in another.
Updated•9 years ago
|
Attachment #8833063 -
Flags: review?(rjesup) → review+
Updated•9 years ago
|
Attachment #8833063 -
Flags: review?(benjamin) → review+
Comment 6•9 years ago
|
||
We should probably uplift this to 53.
Pushed by nfroyd@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b7e4323f4e73
remove mozilla::services::_external_Get*Service; r=bsmedberg,jesup
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
| Assignee | ||
Comment 9•9 years ago
|
||
Comment on attachment 8833063 [details] [diff] [review]
remove mozilla::services::_external_Get*Service
Approval Request Comment
[Feature/Bug causing the regression]: Not applicable. (comment 5 has some context)
[User impact if declined]: More symbols exported from libxul, which might be used in all sorts of peculiar ways.
[Is this code covered by automated tests?]: No.
[Has the fix been verified in Nightly?]: Yes. (Me, manually)
[Needs manual test from QE? If yes, steps to reproduce]: No.
[List of other uplifts needed for the feature/fix]: None.
[Is the change risky?]: No.
[Why is the change risky/not risky?]: We are unexporting symbols which people shouldn't be using in the first place.
[String changes made/needed]: None.
Attachment #8833063 -
Flags: approval-mozilla-aurora?
Comment 10•9 years ago
|
||
Comment on attachment 8833063 [details] [diff] [review]
remove mozilla::services::_external_Get*Service
Remove symbols from 53. Aurora53+.
Attachment #8833063 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 12•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•